fixed ajax loading bar, fixed whitespaces in layout

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -82,6 +82,7 @@ footer {
 
 textarea {
     border-radius: 7px;
+    display: none;
     padding: 7px;
     height: 150px;
 }
@@ -90,7 +91,8 @@ textarea {
     display: none;
     background: url('ajax-loader.gif') top left no-repeat;
     padding-left: 20px;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 300px;
-} 
+}
+
+#infoBar {
+    height: 20px;
+}
